--- a/SISTEMAdeRESERVAS/bin/.gitignore
+++ b/SISTEMAdeRESERVAS/bin/.gitignore
@@ -1,7 +1,8 @@
 /JLogin$1.class
 /JLogin.class
 /JPrincipal$1.class
+/JPrincipal$2.class
 /JPrincipal.class
 /JReservas$1.class
 /JReservas.class
-/JPrincipal$2.class
+/JReservas$2.class
