--- a/.classpath
+++ b/.classpath
@@ -6,6 +6,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="SISTEMAdeRESERVAS/src"/>
-	<classpathentry kind="lib" path="SISTEMAdeRESERVAS/src/resources/sqlite-jdbc-3.18.0.jar"/>
+	<classpathentry kind="lib" path="resources/sqlite-jdbc-3.18.0.jar"/>
 	<classpathentry kind="output" path="SISTEMAdeRESERVAS/bin"/>
 </classpath>
